base/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shop-ui-http
  namespace: shop
spec:
  parentRefs:
  - name: infra-gateway
    sectionName: web
    namespace: traefik
  hostnames:
  - shop.pipenberg.eu
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shop-ui-https
  namespace: shop
spec:
  parentRefs:
  - name: infra-gateway
    sectionName: websecure
    namespace: traefik
  hostnames:
  - shop.pipenberg.eu
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend
      namespace: shop
      port: 80
